--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
         <input type='text' name='guess' />
         <input type='submit' value='guess' />
     </form>
-    <p>Your guess is <%= message %></p>
+    <p><%= message %></p>
     </body>
 </html>
 
