--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,12 @@
 <html>
     <head></head>
     <body>
-        <p>
-        The secret number is <%= secret_number %>
-    </p>
     <form>
         <input type='text' name='guess' />
         <input type='submit' value='guess' />
     </form>
     <p><%= message %></p>
+    <p><%= number_message %></p>
     </body>
 </html>
 
